--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,22 @@
 @tailwind utilities;
 
 body{
-  background-color: black;
+  background-color: rgb(18, 18, 18);
   color: aliceblue;
+}
+
+.perspective {
+  perspective: 1000px;
+}
+
+.transform-style-3d {
+  transform-style: preserve-3d;
+}
+
+.backface-hidden {
+  backface-visibility: hidden;
+}
+
+.rotate-y-180 {
+  transform: rotateY(180deg);
 }
